<resources>
    <string name="app_name">Bonken</string>
    <!-- Strings used for fragments for navigation -->
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="undo">Undo</string>
    <string name="calculate_score">Calculate Score</string>
    <string name="play_again">Play Again</string>
    <string name="enter_names">Enter player names</string>
    <string name="player1"> Player 1:</string>
    <string name="player2"> Player 2:</string>
    <string name="player3"> Player 3:</string>
    <string name="player4"> Player 4:</string>
    <string name="score_not_13">Total score for this round does not equal 13\nPlease change the score</string>
    <string name="score_not_24">Total score for this round does not equal 24\nPlease change the score</string>
    <string name="score_not_10">Total score for this round does not equal 10\nPlease change the score</string>
    <string name="score_not_26">Total score for this round does not equal 26\nPlease change the score</string>
    <string name="trump_not_selected">No valid trump selected\nPlease change trump</string>
    <string name="end_of_game">End of game</string>
    <string name="clear_names">Clear Names</string>
    <string name="name">name</string>
    <string name="ducking">Ducking</string>
    <string name="no_hearts">No Hearts</string>
    <string name="no_men">No Men</string>
    <string name="no_queens">No Queens</string>
    <string name="no_king_of_hearts">No King of Hearts</string>
    <string name="last_trick">No Last Trick</string>
    <string name="domino">Domino</string>
    <string name="trumps1">Trumps round 1</string>
    <string name="trumps2">Trumps round 2</string>
    <string name="trumps3">Trumps round 3</string>
    <string name="trumps4">Trumps round 4</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>